--- a/c4/sim/pipe/Makefile
+++ b/c4/sim/pipe/Makefile
@@ -1,6 +1,7 @@
 # Modify this line to indicate the default version to build
 
-VERSION=std
+#VERSION=std
+VERSION=stall
 
 # Comment this out if you don't have Tcl/Tk on your system
 
