--- a/malloclab-handout/Makefile
+++ b/malloclab-handout/Makefile
@@ -1,9 +1,9 @@
 #
 # Students' Makefile for the Malloc Lab
 #
-TEAM = bovik
+TEAM = THEALGORITHM@STER
 VERSION = 1
-HANDINDIR = /afs/cs.cmu.edu/academic/class/15213-f01/malloclab/handin
+HANDINDIR = handin
 
 CC = gcc
 CFLAGS = -Wall -O2 -m32
