--- a/datalab-handout/Makefile
+++ b/datalab-handout/Makefile
@@ -2,6 +2,7 @@
 # Makefile that builds btest and other helper programs for the CS:APP data lab
 # 
 CC = gcc
+#CC = gcc-7
 CFLAGS = -O -Wall -m32
 LIBS = -lm
 
